istio/custom/istio-ingressgateway-internal.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: istio-ingressgateway-internal
    istio: ingressgateway-internal
    release: istio
  name: istio-ingressgateway-internal
  namespace: istio-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: istio-ingressgateway-internal
      istio: ingressgateway-internal
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      creationTimestamp: null
      labels:
        app: istio-ingressgateway-internal
        chart: gateways
        heritage: Tiller
        istio: ingressgateway-internal
        release: istio
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
              weight: 2
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - ppc64le
              weight: 2
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - s390x
              weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - ppc64le
                      - s390x
                  - key: beta.kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - env:
            - name: ENABLE_WORKLOAD_SDS
              value: "false"
            - name: ENABLE_INGRESS_GATEWAY_SDS
              value: "true"
            - name: INGRESS_GATEWAY_NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
          image: docker.io/istio/node-agent-k8s:1.4.6
          imagePullPolicy: IfNotPresent
          name: ingress-sds
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/run/ingress_gateway
              name: ingressgatewaysdsudspath
        - args:
            - proxy
            - router
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --proxyLogLevel=warning
            - --proxyComponentLogLevel=misc:error
            - --log_output_level=default:info
            - --drainDuration
            - 45s
            - --parentShutdownDuration
            - 1m0s
            - --connectTimeout
            - 10s
            - --serviceCluster
            - istio-ingressgateway-internal
            - --zipkinAddress
            - zipkin.istio-system:9411
            - --proxyAdminPort
            - "15000"
            - --statusPort
            - "15020"
            - --controlPlaneAuthPolicy
            - MUTUAL_TLS
            - --discoveryAddress
            - istio-pilot.istio-system:15011
            - --trust-domain=cluster.local
          image: docker.io/istio/proxyv2:1.4.6
          imagePullPolicy: IfNotPresent
          name: istio-proxy
          ports:
            - containerPort: 15020
              protocol: TCP
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 15029
              protocol: TCP
            - containerPort: 15030
              protocol: TCP
            - containerPort: 15031
              protocol: TCP
            - containerPort: 15032
              protocol: TCP
            - containerPort: 15443
              protocol: TCP
            - containerPort: 15011
              protocol: TCP
            - containerPort: 8060
              protocol: TCP
            - containerPort: 853
              protocol: TCP
            - containerPort: 15090
              name: http-envoy-prom
              protocol: TCP
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15020
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/certs
              name: istio-certs
              readOnly: true
            - mountPath: /var/run/ingress_gateway
              name: ingressgatewaysdsudspath
            - mountPath: /etc/istio/ingressgateway-certs
              name: ingressgateway-certs
              readOnly: true
            - mountPath: /etc/istio/ingressgateway-ca-certs
              name: ingressgateway-ca-certs
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: istio-ingressgateway-service-account
      serviceAccountName: istio-ingressgateway-service-account
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: ingressgatewaysdsudspath
        - name: istio-certs
          secret:
            defaultMode: 420
            optional: true
            secretName: istio.istio-ingressgateway-service-account
        - name: ingressgateway-certs
          secret:
            defaultMode: 420
            optional: true
            secretName: istio-ingressgateway-certs
        - name: ingressgateway-ca-certs
          secret:
            defaultMode: 420
            optional: true
            secretName: istio-ingressgateway-ca-certs
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2020-03-17T13:57:20Z"
      lastUpdateTime: "2020-03-17T13:58:45Z"
      message: ReplicaSet "istio-ingressgateway-5599fd4948" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2020-03-17T14:00:14Z"
      lastUpdateTime: "2020-03-17T14:00:14Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
