istio/custom/service-ingress-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-internal
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "adazr-rg-1001"
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: istio-ingressgateway-internal
    release: istio
    istio: ingressgateway-internal
spec:
  type: LoadBalancer
  loadBalancerIP: "10.5.65.60"
  selector:
    app: istio-ingressgateway-internal
  ports:
    - name: status-port
      port: 15020
      targetPort: 15020
    - name: http2
      port: 80
      targetPort: 80
    - name: https
      port: 443
    - name: kiali
      port: 15029
      targetPort: 15029
    - name: prometheus
      port: 15030
      targetPort: 15030
    - name: grafana
      port: 15031
      targetPort: 15031
    - name: tracing
      port: 15032
      targetPort: 15032
    - name: tls
      port: 15443
      targetPort: 15443
